Add anims to all pages, update git url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="/">Code</a></li>
                 <li><a href="/me.html">Profile</a></li>
                 <li><a href="/journal.html">Journal</a></li>
-                <li><a href="#">Git</a></li>
+                <li><a href="https://gitlab.com/u/Kellan" target="_blank">Git</a></li>
             </ul>
         </div>
     </div>
