--- a/journal.html
+++ b/journal.html
@@ -35,7 +35,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="kcd">
+<div class="kcd animated fadeInDown">
     <div class="container">
         <div class="row">
             <h2>kcd.io</h2>
@@ -43,14 +43,14 @@
     </div>
 </div>
     
-<div class="nav">
+<div class="nav animated fadeIn">
     <div class="container">
         <div class="row">
             <ul class="nav-items">
                 <li><a href="/">Code</a></li>
                 <li><a href="/me.html">Profile</a></li>
                 <li><a href="/journal.html">Journal</a></li>
-                <li><a href="#">Git</a></li>
+                <li><a href="https://gitlab.com/u/Kellan" target="_blank">Git</a></li>
             </ul>
         </div>
     </div>
