--- a/me.html
+++ b/me.html
@@ -35,7 +35,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="kcd animated fadeInDown">
+<div class="kcd">
     <div class="container">
         <div class="row">
             <h2>kcd.io</h2>
@@ -43,7 +43,7 @@
     </div>
 </div>
     
-<div class="nav animated fadeIn">
+<div class="nav">
     <div class="container">
         <div class="row">
             <ul class="nav-items">
