Add sample works

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="kcd animated fadeInDown">
     <div class="container">
         <div class="row">
-            <h2>kcd.io</h2>
+            <h2><a href="/">kcd.io</a></h2>
         </div>
     </div>
 </div>
@@ -55,6 +55,51 @@
         </div>
     </div>
 </div>
+    
+<div class="container works">
+    <div class="row">
+        <div class="four columns work1">
+            <p>Work 1</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work2">
+            <p>Work 2</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work3">
+            <p>Work 3</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+    </div>
+        <div class="row">
+        <div class="four columns work1">
+            <p>Work 4</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work2">
+            <p>Work 5</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work3">
+            <p>Work 6</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+    </div>
+        <div class="row">
+        <div class="four columns work1">
+            <p>Work 7</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work2">
+            <p>Work 8</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+        <div class="four columns work3">
+            <p>Work 9</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
+        </div>
+    </div>
+    </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
