Fix text-tecoration & formatting issues...

--- a/index.html
+++ b/index.html
@@ -58,43 +58,43 @@
     
 <div class="container works">
     <div class="row">
-        <div class="four columns work1">
+        <div class="four columns">
             <p>Work 1</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work2">
+        <div class="four columns">
             <p>Work 2</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work3">
+        <div class="four columns">
             <p>Work 3</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
     </div>
         <div class="row">
-        <div class="four columns work1">
+        <div class="four columns">
             <p>Work 4</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work2">
+        <div class="four columns">
             <p>Work 5</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work3">
+        <div class="four columns">
             <p>Work 6</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
     </div>
         <div class="row">
-        <div class="four columns work1">
+        <div class="four columns">
             <p>Work 7</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work2">
+        <div class="four columns">
             <p>Work 8</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
-        <div class="four columns work3">
+        <div class="four columns">
             <p>Work 9</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae neque et augue pellentesque mollis. Suspendisse ex augue, pretium sit amet tincidunt vitae, consequat eget lacus. Pellentesque ac felis id elit porttitor porta sed vitae lectus. Donec et est felis.</p>
         </div>
